Fix map display on Firefox

--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -4,8 +4,8 @@
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
   width: 480px;
-  position: relative;
-  top: 136px;
+  position: absolute;
+  top: 187px;
   left: 400px;
 }
 
